--- a/app/src/main/res/layout/post_dialog.xml
+++ b/app/src/main/res/layout/post_dialog.xml
@@ -7,15 +7,20 @@
 
     <EditText
         android:id="@+id/edit_post"
-        android:layout_width="match_parent"
+        android:inputType="textMultiLine"
+        android:lines="8"
+        android:minLines="6"
+        android:gravity="top|left"
+        android:maxLines="10"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_margin="5dp"
-        android:ems="10"
-        android:lines="4"
+        android:layout_width="match_parent"
+        android:scrollbars="vertical"
+        android:paddingBottom="6dp"
+        android:paddingTop="6dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
         android:background="@drawable/post_edt_text"
-        android:layout_marginBottom="3dp"
-        android:inputType="textMultiLine" />
+    />
 
     <Button
         android:id="@+id/button_post"
