--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -54,7 +54,7 @@
             android:background="#000000" >
 
         </View>
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/action_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -66,31 +66,55 @@
                 android:id="@+id/like"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView"
+                android:text="@string/like"
+                android:layout_marginRight="4dp"
+                android:layout_alignParentStart="true"
                 tools:text="Like" />
-
-            <TextView
-                android:id="@+id/num_like"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView"
-                tools:text="0" />
+                <LinearLayout android:id="@+id/layout_numLike"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/num_like"
+                    android:layout_toRightOf="@+id/like"
+                    android:layout_marginRight="4dp"
+                    >
+                        <TextView
+                            android:id="@+id/num_like"
+                            android:layout_width="wrap_content"
+                            android:layout_marginRight="2sp"
+                            android:layout_marginLeft="2sp"
+                            android:layout_marginTop="0.2sp"
+                            android:layout_marginBottom="0.2sp"
+                            android:layout_height="wrap_content"
+                            android:textColor="#FFF"
+                            android:text="TextView"
+                            tools:text="0" />
+                </LinearLayout>
 
             <TextView
                 android:id="@+id/dislike"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Dislike" />
+                android:layout_marginRight="4dp"
+                android:layout_toLeftOf="@+id/layout_numDislike"
+                android:text="@string/dislike" />
 
-            <TextView
-                android:id="@+id/num_dislike"
+            <LinearLayout android:id="@+id/layout_numDislike"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="0" />
-        </LinearLayout>
+                android:background="@drawable/num_dislike"
+                android:layout_alignParentEnd="true">
+                <TextView
+                    android:id="@+id/num_dislike"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="2sp"
+                    android:layout_marginLeft="2sp"
+                    android:layout_marginTop="0sp"
+                    android:layout_marginBottom="0sp"
+                    android:text="TextView"
+                    android:textColor="#FFF"
+                    tools:text="0" />
+            </LinearLayout>
+        </RelativeLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
