--- a/app/src/main/res/menu/logout.xml
+++ b/app/src/main/res/menu/logout.xml
@@ -5,4 +5,8 @@
         android:id="@+id/logout"
         android:title="Logout"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/pending"
+        android:title="Pending Post"
+        app:showAsAction="never"/>
 </menu>
