--- a/app/src/main/res/layout/list_pending_post.xml
+++ b/app/src/main/res/layout/list_pending_post.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/card"
-
+    card_view:cardBackgroundColor="#e0e0e0"
     android:layout_marginTop="5dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
