--- a/app/src/main/res/layout/activity_gosip.xml
+++ b/app/src/main/res/layout/activity_gosip.xml
@@ -7,13 +7,6 @@
     android:id="@+id/gosipLayout"
     tools:context=".FeedsGosip.GosipActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/button_dialog"
         android:layout_width="wrap_content"
@@ -25,4 +18,19 @@
         android:clickable="true"
         app:rippleColor="@color/colorAccent"
         app:srcCompat="@drawable/baseline_add_white_24dp" />
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </RelativeLayout>
